--- a/imageblurkt-lib/build.gradle
+++ b/imageblurkt-lib/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 21
         targetSdk 31
         versionCode 1
-        versionName "1.0.0-alpha02"
+        versionName "1.0.0-alpha03"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -39,7 +39,6 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.21'
     }
     packagingOptions {
         resources {
@@ -65,6 +64,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     //Coil Image Loader Library
     api "io.coil-kt:coil-compose:1.3.2"
+    implementation 'com.github.orlandev:blurhashkt:1.0.1-alpha05'
 }
 afterEvaluate {
     publishing {
@@ -72,9 +72,9 @@ afterEvaluate {
             release(MavenPublication) {
                 from components.release
 
-                groupId = 'com.github.orlando-dev-code'
+                groupId = 'com.github.orlandev'
                 artifactId = 'imageblurkt-lib'
-                version = '1.0.0-alpha02'
+                version = '1.0.0-alpha03'
             }
         }
     }
