--- a/imageblurkt-lib/build.gradle
+++ b/imageblurkt-lib/build.gradle
@@ -10,8 +10,6 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 31
-        versionCode 1
-        versionName "1.0.0-alpha03"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -50,20 +48,20 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     //Coil Image Loader Library
-    api "io.coil-kt:coil-compose:1.3.2"
+    api "io.coil-kt:coil-compose:1.4.0"
     implementation 'com.github.orlandev:blurhashkt:1.0.1-alpha05'
 }
 afterEvaluate {
@@ -74,7 +72,7 @@ afterEvaluate {
 
                 groupId = 'com.github.orlandev'
                 artifactId = 'imageblurkt-lib'
-                version = '1.0.0-alpha03'
+                version = '1.0.0-beta01'
             }
         }
     }
