--- a/imageblurkt-lib/build.gradle
+++ b/imageblurkt-lib/build.gradle
@@ -52,7 +52,8 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
-    implementation 'androidx.activity:activity-compose:1.4.0'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -62,7 +63,7 @@ dependencies {
 
     //Coil Image Loader Library
     api "io.coil-kt:coil-compose:2.1.0"
-    implementation 'com.github.orlandev:blurhashkt:1.0.1-alpha05'
+    api 'com.github.orlandev:blurhashkt:1.0.1-alpha05'
 
 }
 afterEvaluate {
