--- a/imageblurkt-lib/build.gradle
+++ b/imageblurkt-lib/build.gradle
@@ -73,7 +73,7 @@ afterEvaluate {
 
                 groupId = 'com.github.orlandev'
                 artifactId = 'imageblurkt-lib'
-                version = '1.0.0-beta.3'
+                version = '1.0.0'
             }
         }
     }
