--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.2.0-beta02'
-    }
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
+        // SDK
+        compileSdk = 33
+        minSdk = 21
+        targetSdk = 33
+        versionCode = 3
+        versionName = "1.0.$versionCode"
+        core_ktx = '1.9.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        //Compose
+        compose_version = '1.2.1'
+        compose_compiler = '1.3.1'
+        compose_runtime = '1.2.1'
     }
+
+
+
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id 'com.android.application' version '7.2.2' apply false
+    id 'com.android.library' version '7.2.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
