--- a/build.gradle
+++ b/build.gradle
@@ -5,23 +5,23 @@ buildscript {
         compileSdk = 33
         minSdk = 21
         targetSdk = 33
-        versionCode = 3
+        versionCode = 4
         versionName = "1.0.$versionCode"
+        
         core_ktx = '1.9.0'
 
-        //Compose
-        compose_version = '1.2.1'
-        compose_compiler = '1.3.1'
-        compose_runtime = '1.2.1'
+        compose_bom = '2023.01.00'
+        compose_compiler = '1.4.0'
+        
     }
 
 
 
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
 
 task clean(type: Delete) {
